[package]
name = "bevy_dual_contouring"
version = "0.0.1"
authors = ["James Youngblood, james@youngbloods.org", "Henning Meyer <tutmann@gmail.com>"]
edition = "2021"

description = "Produce meshes using dual contouring for voxel data in the Bevy Engine."
repository = "https://github.com/soundeffects/bevy_dual_contouring"
readme = "README.md"
keywords = ["manifold", "dual-contouring", "bevy", "voxel"]
license = "Apache-2.0 OR MIT"

[lib]
name = "bevy_dual_contouring"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.8" }
alga = "0.9"
nalgebra = "0.22"
rand = "0.7"
once_cell = "1.4"
bbox = "0.11"
num-traits = "0.2"
array-macro = "2.1.5"

[dev-dependencies]
approx = "0.3"
bencher = "0.1"
implicit3d = "0.14"
